added Click Functionality for Option Buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="app">
-        <h1>Computer Vision Quiz</h1>
+        <h1>Computer Science Quiz</h1>
 
         <div class="quiz">
             <h2 id="question">Question goes here!</h2>
