added quiz-end functionalities and Click Functionality for Replay Button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Computer Science Quiz</h1>
 
         <div class="quiz">
-            <h2 id="question">Question goes here!</h2>
+            <h2 id="question" class="question">Question goes here!</h2>
 
             <div id="answer-buttons">
                 <button class="btn">Option 1</button>
@@ -24,8 +24,12 @@
                 <button class="btn">Option 4</button>
             </div>
 
-            <div id="next-button">
+            <div id="next-button" class="next-button">
                 <button>Next</button>
+            </div>
+
+            <div id="replay-button" class="replay-button">
+                <button>Replay</button>
             </div>
         </div>
     </div>
